# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Id$

*portage-2.0.49-r1 (25 Aug 2003): Fixes

  25 Aug 2003; Nicholas Jones <carpaski@gentoo.org> emerge: -K traceback fix.
  Made fetchonly quit traversing the merge code after fetching.

  25 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Removed
  auxcache saving code -- A few bugs and caching problems need to be resolved.
  Moved a block of code in aux_get inside of an existing conditional -- Should
  provide a small speedup.

*portage-2.0.49 (22 Aug 2003): GRP downloading, Selinux, General Fixes

  22 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Make
  auxcache saving more friendly.

*portage-2.0.49_pre20/21 (20 Aug 2003): Fixes + security enhancements

  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix for
  auxcache saving.

*portage-2.0.49_pre19 (20 Aug 2003): Fixes + security enhancements

  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> *: Updates to Wayne's
  modifications on dispatch-conf.
  
  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: sfperms
  added to strip permissions if set in features. selinux context support.
  Nakano's cleanups for unmerge output. Added distcc and ccache versions
  into emerge info's output. 'autoaddcvs' FEATURE is documented in make.conf.
  
  20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Selinux code
  added. No longer traceback on cp_list for categories. Added in a patch to
  use a pickle for auxcache storing. Should help slow IO boxes.

*portage-2.0.49_pre18 (15 Aug 2003): Fixes.

  15 Aug 2003; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Nakano's
  fix for a glob expansion bug on a tar call.
  
  15 Aug 2003; Nicholas Jones <carpaski@gentoo.org> emerge: Nakano's fixes
  for exiting on a signal and incorrect output for the unmerge screen.
  